# NeosegPipeline

./: CMakeLists.txt  Common.cmake  LICENSE  NeosegPipeline.cmake  README.md  SuperBuild.cmake
AverageDeformationField/: AverageDeformationField.cxx  AverageDeformationField.xml  CMakeLists.txt
NeosegPipeline/: ABCExecution.cxx  ABCParameters.ui  About.ui  AntsJointFusionExecution.cxx  AntsJointFusionExecution.h  AntsJointFusionParameters.cxx  AntsJointFusionParameters.h  AntsParameters.cxx  AntsParameters.h  Atlas.h  AtlasGeneration.cxx  AtlasPopulationRegistration.cxx  AtlasPopulationRegistration.h  AtlasRegistration.cxx  AtlasRegistration.h  CMakeLists.txt  DerivedWindow.cxx  DerivedWindow.h  DtiRegistration.cxx  DtiRegistration.h  ExecutablePaths.cxx  ExecutablePaths.h  ExistingAtlasRegistration.cxx  ExistingAtlasRegistration.h  LibraryPaths.h  MultiSegPipeline.cxx  MultiSegPipeline.xml  NeosegPipelineTool.cxx  Pipeline.cxx  Pipeline.h  PipelineParameters.cxx  PipelineParameters.h  QuicksilverParameters.cxx  QuicksilverParameters.h  RegistrationParameters.cxx  RegistrationParameters.h  Script.cxx  Script.h  Window.ui  WindowMultiseg.ui  (+10 more)
NeosegPipeline/Resources/quicksilver_script/: registration.py  registration_replacingtext.py
ReassignWhiteMatter/: CMakeLists.txt  ReassignWhiteMatter.cxx  ReassignWhiteMatter.xml
SpreadFA/: CMakeLists.txt
SuperBuild/: External_ABC.cmake  External_ANTs.cmake  External_DTIProcess.cmake  External_ITKTransformTools.cmake  External_ITKv4.cmake  External_Qt5.cmake  External_SPHARM-PDM.cmake  External_SlicerCLI.cmake  External_VTK.cmake  External_neoseg.cmake  External_niral_utilities.cmake  External_teem.cmake
WeightedLabelsAverage/: CMakeLists.txt  WeightedLabelsAverage.cxx
