# This is the root ITK CMakeList file: 
cmake_minimum_required(VERSION 2.8.3)

# This project is designed to be built outside the Insight source tree.
project(SpreadFA)

# Find SlicerExecutionModel
FIND_PACKAGE(SlicerExecutionModel REQUIRED)
INCLUDE(${SlicerExecutionModel_USE_FILE})
INCLUDE(${GenerateCLP_USE_FILE})

# Find ITK
find_package(ITK REQUIRED)
INCLUDE (${ITK_USE_FILE})

# GENERATECLP(SpreadFA_CLP SpreadFA.xml)

# include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})

# SET(SpreadFA_SOURCE main.cxx)
# SET(SpreadFA_HEADERS itkSpreadFA.h)

# add_executable(SpreadFA ${SpreadFA_SOURCE} ${SpreadFA_CLP})

# TARGET_LINK_LIBRARIES(SpreadFA ${ITK_LIBRARIES})

# install(TARGETS SpreadFA RUNTIME DESTINATION bin)

SEMMacroBuildCLI(
   NAME SpreadFA
   EXECUTABLE_ONLY
   INCLUDE_DIRECTORIES ${ITK_INCLUDE_DIR}
   LINK_DIRECTORIES ${ITK_LIBRARY_DIRS}
   TARGET_LIBRARIES ${ITK_LIBRARIES}
   RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
   LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
   ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
   INSTALL_RUNTIME_DESTINATION ${INSTALL_RUNTIME_DESTINATION}
   INSTALL_LIBRARY_DESTINATION ${INSTALL_LIBRARY_DESTINATION}
   INSTALL_ARCHIVE_DESTINATION ${INSTALL_ARCHIVE_DESTINATION}
)
